terraform/minikube/modules/grafana/istio.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: "reactory-grafana-gateway"
  namespace: reactory
spec:
  # The selector matches the ingress gateway pod labels.
  # If you installed Istio using Helm following the standard documentation, this would be "istio=ingress"
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: grafana-web
      protocol: TCP
    hosts:
    - "grafana.reactory.minikube"
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: reactory-grafana-gateway
  namespace: reactory
spec:
  hosts:
  - "grafana.reactory.minikube"
  gateways:
  - reactory-grafana-gateway
  tcp:
  - match:
    - port: 80
    route:
    - destination:
        host: reactory-grafana
        port:
          number: 80
